--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         .container {
             text-align: center;
-            width: 80%;
+            width: 95%;
         }
 
         h1 {
@@ -33,7 +33,7 @@
         iframe {
             border: 2px solid #ccc;
             width: 100%;
-            height: 600px;
+            height: 90vh;
         }
     </style>
 </head>
